--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -20,6 +21,9 @@
   "homepage": "https://github.com/TheBridge-FullStackDeveloper/ecommerce-back#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "node": "^18.4.0",
+    "nodemon": "^2.0.19",
+    "slonik": "^28.1.1"
   }
 }
