--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/TheBrproductIdge-FullStackDeveloper/ecommerce-back#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "node": "^18.4.0",
     "nodemon": "^2.0.19",
     "slonik": "^28.1.1"
   }
