--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
-    "slonik": "^28.1.1"
+    "slonik": "^28.1.1",
+    "uuid": "^8.3.2"
   }
 }
