--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,14 @@ services:
   db:
     image: postgres:14.2-alpine
     ports:
-      - 5433:5433
+      - 5432:5432
     environment:
-      POSTGRES_USER: user1
-      POSTGRES_PASSWORD: "1234"
-      POSTGRES_DB: prueba
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
 
   admin:
     image: adminer
     ports:
       - 8080:8080
+
