--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - 5433:5433
     environment:
-      POSTGRES_USER: user1
-      POSTGRES_PASSWORD: "1234"
-      POSTGRES_DB: prueba
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
 
   admin:
     image: adminer
